--- a/crypton/common-sequences/pom.xml
+++ b/crypton/common-sequences/pom.xml
@@ -7,4 +7,11 @@
   </parent>
   <artifactId>commons-sequences</artifactId>
   <name>common-sequences</name>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.simonworks.projects</groupId>
+  		<artifactId>smart-sequences-api</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
+  </dependencies>
 </project>
