--- a/encrypton/common-sequences/pom.xml
+++ b/encrypton/common-sequences/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.simonworks.projects</groupId>
-    <artifactId>crypton</artifactId>
+    <artifactId>encrypton</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>commons-sequences</artifactId>
