--- a/encrypton/smart-sequences/pom.xml
+++ b/encrypton/smart-sequences/pom.xml
@@ -4,28 +4,17 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.simonworks.projects</groupId>
-		<artifactId>crypton</artifactId>
+		<artifactId>encrypton</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>common-caches</artifactId>
-	<name>common-caches</name>
-	<dependencies>
-		<dependency>
-			<groupId>org.simonworks.projects</groupId>
-			<artifactId>cacheworks</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
+	<artifactId>smart-sequences-api</artifactId>
+	<name>smart-sequences</name>
 
+	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver -->
-		<dependency>
-			<groupId>org.mongodb</groupId>
-			<artifactId>mongo-java-driver</artifactId>
 		</dependency>
 	</dependencies>
 </project>
